test/parsing/ferguson/comment-test2.good
comment-test2.chpl:14: error: EOF in comment
comment-test2.chpl:6: note: Unterminated comment started here
comment-test2.chpl:9: note: Nested comment started here
