test/parsing/ferguson/comment-test2.chpl
/* This
   comment
   ends
 */

/*
   This comment does not end
   because it has a nested comment
   /*

 */


